OOR-CORS: Make PreflightController per-profile

Existing implementation uses a single PreflightController for all
profiles, but ideally it should be per-profile.

This patch makes the controller per-profile for NetworkService, and does
it per-factory for legacy code path due to lack of NetworkContext.

Bug: 894690
Change-Id: Ief446431e4235bcecd68ba1f50528e721efed96a
Reviewed-on: https://chromium-review.googlesource.com/c/1331349
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Commit-Queue: Takashi Toyoshima <toyoshim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607513}
Former-commit-id: ef3eae66abc67ff1334fb375e182cf5d6396582b